fix: rename heartbeat to heartrate
